# UDT

./: .coverage  .gitignore  CLAUDE.md  CLAUDE_backup.md  CLEANUP_CHECKLIST.md  MIGRATION_GUIDE.md  MILESTONE_ARCHIVE_2025_01_18.md  Makefile  QUARANTINE_BACKUP_README.md  README.md  Universal_Distance_Dilation_Theory_Manuscript.md  audit-all.bat  audit_report_contamination_analysis.md  build-paper.bat  charlestest.py  cosmic_information_geometry.py  csp_udt_temporal.py  debug_parser.py  debug_sparc.py  debug_udt_fixed.py  external.md  fix_quantum_regression.py  geometric_emergence.py  manuscript_preliminary.md  methodological_regression_check.py  minimal_udt_test.py  pandoc-config.yaml  parameter_audit_report.md  parameter_registry.json  phase1_rigorous_validation.py  prompt.md  pyproject.toml  references.bib  refined_scale_dependent.py  repo.md  requirements.txt  review3.md  run_udt_validation.py  scale_dependent_spacetime.py  sparc_data_parser.py  (+22 more)
.claude/: settings.local.json
data/: download_accessible_cms_files.py  download_cms_open_data.py  download_sparc_data.py  download_specific_cms_data.py  manifest_sha256.txt  real_sparc_analysis.py
definitive_real_results/: sparc_udt_results.csv
docs/: Artifact_Correction_Scientific_Methodology.md  CMB_Raw_Data_Sources.md  CRITICAL_SCIENTIFIC_INTEGRITY_ALERT.md  Data Contamination Prevention Guide.md  LIGO_Projection_Theory_Documentation.md  Local_Constancy_Breakthrough.md  Planck_CMB_Analysis_Results.md  Postulate_Based_Approach_Analysis.md  Pure_Geometric_Muon_g2_Documentation.md  Quantum_Datasets.md  Quantum_Derivations_Master_Reference.md  Scientific_Validation_Standards.md  Scientific_Validation_Summary.md  Supernova_Data_Contamination_Analysis.md  Three_Postulates_Fresh_Start.md  UDT Framework.md  UDT_CMB_Data_Interpretation_Issues.md  UDT_Corrected_Formulation_Insight.md  UDT_Quantum_Framework_Complete_Documentation.md  UDT_Validation_Summary.md  UDT_vs_Standard_Model_Comparison.tex  UDT_vs_Standard_Model_Physics_Differences.md  Unbiased_Artifact_Correction_Procedure.md  Zero_Contamination_Methodology.md  build_manuscript.sh  cms_data_access_report.md  create_comparison_visual.py  create_equations_comparison.py  create_experimental_validation.py  data.md  data_requests.md  derivations.md  index.md  raw_data.md  research_access_requests.md  theory.md
examples/: 01_basic_udt_validation.ipynb  README.md  parameter_regression_prevention_demo.py  reproduce_one_galaxy.ipynb  validation_gate_demo.py
exploration/: README.md
galaxy_comprehensive_test/: sparc_udt_results.csv
galaxy_validation_test/: sparc_udt_results.csv
independent_verification/: README.md  quick_start_guide.md
mathematical_development/: artifact_corrected_supernova_analysis.py  artifact_correction_bias_testing.py  artifact_correction_peer_review_summary.py  audit_udt_field_equations.py  brutal_supernova_audit.py  cmb_artifact_correction_framework.py  cmb_artifact_correction_summary.py  comprehensive_full_sparc_validation.py  comprehensive_observational_test.py  comprehensive_sparc_validation.py  corrected_supernova_analysis.py  debug_kernel_discrepancy.py  debug_udt_distance.py  derive_base_profile_from_distance_equivalence.py  derive_kernel_from_distance_equivalence.py  derive_r0_function_from_geometry.py  derive_udt_geodesics.py  diagnose_udt_velocity_problem.py  dual_causation_redshift_analysis.py  examine_sparc_data_contamination.py  formal_artifact_correction_justification.py  full_healpy_cmb_analysis.py  gr_limit_analysis.py  gr_limit_simple.py  honest_supernova_analysis.py  investigate_r0_scaling.py  kernel_derivation_clean.py  local_constancy_explanation.py  non_local_gravity_derivation.py  postulate_reinterpretation.py  pure_geometric_lcdm_comparison.py  pure_geometric_udt_validation.py  r0_scaling_conclusions.py  solve_udt_field_equations.py  solve_udt_field_equations_ascii.py  solve_udt_field_equations_clean.py  sparc_clean_analysis.py  sparc_clean_no_distances.py  sparc_correct_enhancement_formula.py  sparc_corrected_scale_application.py  (+43 more)
notebooks/: 03_galactic_validation.ipynb
phase1-validation/: README.md
quantum_validation/: bell_test_udt_analysis.py  ligo_gravitational_wave_udt_analysis.py  ligo_gravitational_wave_udt_test.py  muon_g2_udt_analysis.py  muon_g2_udt_complete_test.py  muon_g2_udt_corrected_test.py  pure_geometric_muon_g2_test.py  pure_udt_qed_derivation.py  truly_pure_udt_quantum_framework.py  udt_bell_test_real_data.py  udt_gravitational_wave_reanalysis.py  udt_ligo_final_analysis.py  udt_ligo_improved_analysis.py  udt_ligo_pure_geometric_analysis.py  (+2 more)
(+192 files in other folders)
