[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "udt"
version = "0.1.0"
description = "Universal Distance Dilation Theory - Cosmological and galactic dynamics framework"
readme = "README.md"
authors = [
    {name = "Charles Rotter", email = ""},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Astronomy",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "scipy>=1.7.0",
    "matplotlib>=3.4.0",
    "pandas>=1.3.0",
    "astropy>=4.3.0",
    "jupyter>=1.0.0",
    "seaborn>=0.11.0",
    "scikit-learn>=1.0.0",
    "emcee>=3.1.0",
    "corner>=2.2.0",
    "plotly>=5.0.0",
    "ipywidgets>=7.6.0",
    "sympy>=1.10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov",
    "black",
    "flake8",
    "isort",
    "pip-tools",
]
docs = [
    "sphinx",
    "sphinx-rtd-theme",
    "nbsphinx",
]

[project.urls]
"Homepage" = "https://github.com/charlesrotter/UDT"
"Bug Reports" = "https://github.com/charlesrotter/UDT/issues"
"Source" = "https://github.com/charlesrotter/UDT"

[project.scripts]
udt-analyze-sparc = "scripts.analyze_sparc_galaxies:main"
udt-analyze-supernovae = "scripts.analyze_supernovae:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["udt*", "scripts*", "mathematical_development*", "quantum_validation*"]
exclude = ["tests*", "docs*", "exploration*", "archive*"]

[tool.black]
line-length = 120
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_functions = ["test_*"]
addopts = "-v --cov=udt --cov-report=html --cov-report=term-missing"